<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A1F5FD"
    tools:context=".DetailUser2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_detail_avatar"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="4sp"
            android:layout_gravity="center"
            tools:src="@tools:sample/avatars"/>

        <TextView
            style="@style/TextContent"
            android:id="@+id/nama_full"
            android:textSize="25sp"
            android:text="@string/fullname"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"/>

        <TextView
            style="@style/TextContent.Subtitle"
            android:id="@+id/Usernama"
            android:text="@string/username"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/followers"
                android:textColor="@android:color/black"
                android:layout_gravity="center_horizontal"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/followers_jmlh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="100"
                android:layout_marginLeft="15dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/following"
                android:layout_gravity="center"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/following_jmlh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="33"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/repository"
                android:layout_gravity="center"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/Repository_jmlh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="50"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="10dp">
        </View>

        <TextView
        style="@style/TextContent"
        android:textSize="20sp"
        android:text="@string/deskripsidetail"
        android:layout_marginTop="10dp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                style="@style/TextSpec.Field"
                android:text="Username"
                android:layout_marginLeft="5dp"
                android:textColor="@color/black"/>

            <TextView
                style="@style/TextSpec.Value"
                android:id="@+id/Usernama2"
                android:text="@string/username"
                android:textColor="@color/black"/>
        </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="FullName"
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/black"/>

                <TextView
                    style="@style/TextSpec.Value"
                    android:id="@+id/nama_full2"
                    android:text="@string/fullname"
                    android:textColor="@color/black"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="Location"
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/black"/>

                <TextView
                    style="@style/TextSpec.Value"
                    android:id="@+id/Lokasi1"
                    android:text="@string/Location"
                    android:textColor="@color/black"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="Company"
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/black"/>

                <TextView
                    style="@style/TextSpec.Value"
                    android:id="@+id/company3"
                    android:text="@string/Company"
                    android:textColor="@color/black"/>
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/Backhome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:backgroundTint="#E91E63"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:onClick="back"
            android:text="@string/back" />

    </LinearLayout>

</ScrollView>